Fix typo in navigation links

--- a/ECC-prototype/app/views/layouts/_navigation_links.html.erb
+++ b/ECC-prototype/app/views/layouts/_navigation_links.html.erb
@@ -1,5 +1,5 @@
 <nav>
-  <a href="main">Home</a>
+  <a href="/">Home</a>
   <a href="search">Advanced Search</a>
   <a href="collections">Collections</a>
   <a href="resources">Resources</a>
