--- a/ECC-prototype/FrontEndWork/ecc.css
+++ b/ECC-prototype/FrontEndWork/ecc.css
@@ -1,21 +1,74 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
+	line-height: 1;
     background-color: white;
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
-    margin-left: 3em;
+    margin-left: 1.5em;
 }
 
 nav {
     padding: 1em;
 }
 
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
 h1 {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
+    font-size: 2em;
 }
 
 li {
+    padding: 1em;
+}
+
+figure {
     padding: 1em;
 }
 
@@ -33,14 +86,16 @@ a {
     background-color: firebrick;
     color: antiquewhite;
     font-size: 1em;
-    width: 30%;
-    border-radius: 2em;
+    border-radius: 1em;
+    padding: 0.5em;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 .column {
-    -webkit-column-count: 2;
-       -moz-column-count: 2;
-            column-count: 2;
+    -webkit-column-count: 3;
+       -moz-column-count: 3;
+            column-count: 3;
     -webkit-column-fill: balance;
        -moz-column-fill: balance;
             column-fill: balance;
