--- a/ECC-prototype/FrontEndWork/ecc.css
+++ b/ECC-prototype/FrontEndWork/ecc.css
@@ -30,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-    background-color: white;
+    background-color: #fff;
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
     margin-left: 1.5em;
@@ -62,6 +62,12 @@ h1 {
     display: -ms-inline-flexbox;
     display: inline-flex;
     font-size: 2em;
+    margin-left: 0.5em;
+}
+
+h5 {
+    color: #ffffff;
+    font-size: 1.1em;
 }
 
 li {
@@ -82,8 +88,19 @@ a {
     color: #e7434e;
 }
 
+p {
+    padding: 1em;
+}
+
+footer {
+    background-color: darkslategrey;
+    padding: 2em;
+    display: inline-flex;
+    width: 100%;
+}
+
 .button {
-    background-color: firebrick;
+    background-color: #e7434e;
     color: antiquewhite;
     font-size: 1em;
     border-radius: 1em;
@@ -92,6 +109,10 @@ a {
     padding-right: 2em;
 }
 
+.banner {
+    text-align: center;
+    color: #464646;
+}
 .column {
     -webkit-column-count: 3;
        -moz-column-count: 3;
@@ -100,16 +121,23 @@ a {
        -moz-column-fill: balance;
             column-fill: balance;
 }
+.flinks {
+    color: gray;
+}
 
 .navhover:hover, .stemcat:hover {
-    background-color: firebrick;
-    color: antiquewhite;
+    background-color: #e7434e;
+    color: #fff;
+}
+
+.plinks {
+    padding: 0em;
 }
 
 .plus {
     font-size: 1.5em;
     background-color: darkgray;
-    color: antiquewhite;
+    color: #fff;
     padding: 0em;
 }
 
@@ -124,24 +152,30 @@ a {
     border: 1px solid darkgray;
     border-radius: 1em;
     margin-top: 0.5em;
-    background-color: whitesmoke;
+    background-color: #fff;
 }
 
-#logo {
-    width: 100%;
-}
-
-#search {
-    background-color: firebrick;
-    color: antiquewhite;
-    border-radius: 2em;
+#emailbutton {
+       background-color: #e7434e;
+    color: #fff;
     height: 3.5em;
-    width: 10%;
+    border-radius: 0.313em;
 }
 
-#searchbar {
+
+#emailbutton, #search {
+    background-color: #e7434e;
+    color: #fff;
     height: 3.5em;
-    border-radius: 2em;
-    width: 25%;
-    margin: 2em;
+    border-radius: 0.313em;
 }
+
+#emailbar, #searchbar {
+    margin-left: 1em;
+    margin-top: 1em;
+    height: 3.5em;
+    border-radius: 0.313em;
+    display: inline-block;
+    width: 50%;
+}
+
