corrected search page html errors

--- a/ECC-prototype/FrontEndWork/ecc.css
+++ b/ECC-prototype/FrontEndWork/ecc.css
@@ -125,6 +125,10 @@ footer {
     color: gray;
 }
 
+.logo {
+    width: 100%;
+}
+
 .navhover:hover, .stemcat:hover {
     background-color: #e7434e;
     color: #fff;
@@ -155,6 +159,7 @@ footer {
     background-color: #fff;
 }
 
+
 #emailbutton {
        background-color: #e7434e;
     color: #fff;
@@ -178,4 +183,5 @@ footer {
     display: inline-block;
     width: 50%;
 }
+
 
