changed page titles and added ethics code example

--- a/ECC-prototype/FrontEndWork/ecc.css
+++ b/ECC-prototype/FrontEndWork/ecc.css
@@ -195,6 +195,13 @@ footer {
     margin-left: 1em;
 }
 
+#contents {
+    margin-left: 2em;
+}
+#disclaimer {
+    font-style: italic;
+}
+
 
 #emailbutton {
        background-color: #e7434e;
