Page Additions and CSS Reformatting
Added Header and Footers to the Resources and Ethics @ IIT pages, and
changed media query to use ems and not pixels

--- a/ECC-prototype/FrontEndWork/ecc.css
+++ b/ECC-prototype/FrontEndWork/ecc.css
@@ -229,7 +229,7 @@ footer {
     width: 50%;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 31.250em) {
     footer {
     display: block;
     width: 100%;
@@ -240,3 +240,4 @@ footer {
     width: 100%;
   
 }
+
