--- a/ECC-prototype/FrontEndWork/ecc.css
+++ b/ECC-prototype/FrontEndWork/ecc.css
@@ -3,10 +3,10 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
+html, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
+del, dfn, em, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
@@ -43,16 +43,19 @@ nav {
 
 ol, ul {
 	list-style: none;
-    font-size: 0.75em;
+    font-size: 0.8em;
 }
+
 blockquote, q {
 	quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -76,6 +79,9 @@ h5 {
     color: #ffffff;
     font-size: 1.1em;
 }
+img {
+    width: 30%;
+}
 
 li {
     padding: 1em;
@@ -83,10 +89,6 @@ li {
 
 figure {
     padding: 1em;
-}
-
-img {
-    width: 30%;
 }
 
 a {
@@ -102,8 +104,6 @@ p {
 footer {
     background-color: darkslategrey;
     padding: 2em;
-    display: inline-flex;
-    width: 100%;
 }
 
 .advsearch {
@@ -229,6 +229,8 @@ footer {
     display: inline-flex;
     height: 5em;
     font-size: 0.9em;
+    border-color: slategray;
+    border-width: 0.5em;
 }
 
 #emailbar {
@@ -237,17 +239,5 @@ footer {
     width: 50%;
     display: inline-flex;
     height: 3.5em;
-}
-
-@media only screen and (max-width: 31.250em) {
-    footer {
-    display: block;
-    width: 100%;
-
-    }
-  nav{
-    display: block;
-    width: 100%;
-  
 }
 
