fixed collections layout

--- a/ECC-prototype/FrontEndWork/ecc.css
+++ b/ECC-prototype/FrontEndWork/ecc.css
@@ -81,6 +81,7 @@ h5 {
     color: #ffffff;
     font-size: 1.1em;
 }
+
 img {
     width: 30%;
 }
@@ -90,7 +91,8 @@ li {
 }
 
 figure {
-    padding: 1em;
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 a {
@@ -116,11 +118,9 @@ footer {
 .button {
     background-color: #e7434e;
     color: antiquewhite;
-    font-size: 1em;
     border-radius: 1em;
-    padding: 0.5em;
-    padding-left: 2em;
-    padding-right: 2em;
+    padding: 2%;
+    font-size: 80%;
 }
 
 .banner {
