editing nav bar layout

--- a/ECC-prototype/FrontEndWork/ecc.css
+++ b/ECC-prototype/FrontEndWork/ecc.css
@@ -37,11 +37,12 @@ body {
 }
 
 nav {
-    padding: 1em;
-    position: fixed;
-    background-color: lightgray;
+    display: block;
     width: 100%;
+    min-height: 2em;
+    margin: 1em 0;
 }
+
 
 ol, ul {
 	list-style: none;
@@ -162,7 +163,6 @@ footer {
 
 .logo {
     width: 100%;
-    margin-top: 3em;
 }
 
 .navhover:hover, .stemcat:hover {
@@ -275,3 +275,42 @@ footer {
     display: inline-flex;
     height: 3.5em;
 }
+
+@media screen and (max-width: 56.875em) {
+    
+    nav {
+        position: relative;
+        width: 100%;
+        min-height: 2em;
+        margin: 1em 0;
+    }
+
+    .nav ul {
+        margin: 0;
+        padding: 0.25em 0;
+        width: 9em;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border: solid 0.05em #aaa;
+        background: #fff url(icon-menu.png) no-repeat 10px 11px;
+        border-radius: 5px;
+        box-shadow: 0 1px 2px rgba(0,0,0,.3);
+    }
+
+    .nav li {
+        display: none;
+        margin: 0em;
+    }
+
+    .nav a {
+        display: block;
+        padding: 0.25 0.25em 0.25em 1.6em;
+        text-align: left;
+    }
+    
+    
+}
+    
+
+
