--- a/ECC-prototype/app/apps/themes/ecc/views/index.html.erb
+++ b/ECC-prototype/app/apps/themes/ecc/views/index.html.erb
@@ -1,35 +1,84 @@
-<% (current_site.the_post_type("post").the_posts.decorate rescue {}).each_with_index do |post, index| %>
-    <article class="post-<%= index %> post type-post status-publish format-standard hentry category-sin-categoria" id="post-<%= index %>">
-        <header class="entry-header">
-            <div class="entry-thumbnail">
-                <%= raw post.the_link_thumb() if post.has_thumb?%>
-            </div>
-            <h1 class="entry-title">
-                <a rel="bookmark" href="<%= post.the_url %>"><%= post.the_title %></a>
-            </h1>
-            <div class="entry-meta">
-                <span class="date">
-                    <a rel="bookmark" title="Enlace permanente a <%= post.the_title %>" href="<%= post.the_url %>">
-                        <time datetime="" class="entry-date"><%= post.the_created_at %></time>
-                    </a>
-                </span>
-                <span class="categories-links">
-                    <%= raw get_taxonomy(post.the_categories.decorate, 'category tag') %>
-                </span>
-                <span class="tags-links">
-                    <%= raw get_taxonomy(post.the_tags.decorate, 'tag') %>
-                </span>
-            </div><!-- .entry-meta -->
-        </header><!-- .entry-header -->
-        <div class="entry-content">
-            <%= raw post.the_content %>
-        </div><!-- .entry-content -->
-        <% if post.the_comments.count > 0 %>
-            <footer class="entry-meta">
-                <div class="comments-link">
-                    <a href="<%= post.the_url %>">Ver los comentarios</a>
-                </div><!-- .comments-link -->
-            </footer><!-- .entry-meta -->
-        <% end %>
-    </article>
-<% end %>
+<a class="logo" href="index.html"><img src="ECC-Banner.png" class="logo" alt="ECC logo"/></a>
+<nav>
+    <a class="navhover" href="index.html">Home</a>
+    <a class="navhover" href="search.html">Advanced Search</a>
+    <a class="navhover" href="collections.html">Collections</a>
+    <a class="navhover" href="resources.html">Resources</a>
+    <a class="navhover" href="ethicslinks.html">Ethics &#64; IIT</a>
+</nav>
+<!-- Main Banner -->
+<div class="banner">
+<h1>THE ECC</h1>
+    <p>THE WORLD'S LARGEST DATABASE OF ETHICS CODES</p>
+    <ul>
+        <li>2,500 individual codes</li>
+        <li>1,500 different organizations</li>
+        <li>Codes dating back to 1887 until now</li>
+    </ul>
+</div>
+<form>
+    <input type="search" id="searchbar" value="" placeholder="Explore Our Digital Collection">
+    <button type="button" id="search">SEARCH</button>
+</form>
+
+
+<!--- Content -->
+<div>
+<ul>
+    <li>&rarr; Search by keyword in the search box up top</li>
+    <img src="keywordex.png" class="logo" alt="keyword search sample picture">
+    <li>&rarr; Perform an<a href="search.html">Advanced Search</a>by subject, term, organization, or year</li>
+    <img src="advsearchex.png" class="logo" alt="advanced search sample picture">
+    <li>&rarr; Browse the collection by professional category in<a href="collections.html">Collections</a></li>
+    <img src="collsearchex.png" class="logo" alt="collections search sample picture">
+</ul>
+
+<p class="banner">Thanks to our sponsor the<a href="https://www.macfound.org/" class="plinks"> John D. and Catherine T. MacArthur Foundation</a>, and the many individuals who have contributed to this resource.</p>
+
+</div>
+
+<!-- Footer -->
+<footer class="column">
+    <h5>RESOURCES</h5>
+        <ul>
+            <li><a class="flinks" href="http://ethics.iit.edu/ecodes/node/5621">Print Guide</a></li>
+            <li><a class="flinks" href="http://ethics.iit.edu/ecodes/node/5421">Collection Policy</a></li>
+            <li><a class="flinks" href="http://ethics.iit.edu/ecodes/bibliography">Bibliography</a></li>
+            <li><a class="flinks" href="http://ethics.iit.edu/ecodes/introduction">Why Codes?</a></li>
+        </ul>
+
+    <h5>ETHICS @ IIT</h5>
+        <ul>
+            <li><a class="flinks" href="http://ethics.iit.edu/ecodes/about">About</a></li>
+            <li><a class="flinks" href="http://ethics.iit.edu/ecodes/authoring-code">Authoring a Code</a></li>
+            <li><a class="flinks" href="http://ethics.iit.edu/">CSEP</a></li>
+            <li><a class="flinks" href="http://ethicscodescollection.blogspot.com/">News and Updates</a></li>
+        </ul>
+<div>
+    <h5>SUBSCRIBE TO THE CSEP</h5>
+        <form>
+            <input type="text" id="emailbar" value="" placeholder="Email Address">
+            <button type="submit" id="emailbutton">SUBSCRIBE</button>
+        </form>
+</div>
+        <ul>
+            <li><a class="flinks" href="https://www.facebook.com/CSEPIllinoisTech/"><i class="icon-facebook"></i></a></li>
+            <li><a class="flinks" href="https://twitter.com/csep1"><i class="icon-twitter"></i></a></li>
+            <li><a class="flinks" href="http://cseplibrary.blogspot.com/"><i class="icon-blogpost"></i></a></li>
+            <li><a class="flinks" href="http://feeds2.feedburner.com/CsepLibrary"><i class="icon-feedburner"></i></a></li>
+        </ul>
+
+<!--<div id="footer-wrapper">
+        <h5>Center for the Study of Ethics in the Professions</h5>
+            <p>
+            Hermann Hall
+            <br>
+            3241 S Federal Street, Room 204
+            <br>
+            Chicago, IL 60616
+            </p>
+            <p>
+            Tel 312.567.3017 | <a href="mailto:csep@iit.edu"> csep@iit.edu</a>
+            </p>
+</div>  -->
+</footer>
