Change favicon to ECC scale thing

--- a/ECC-prototype/app/apps/themes/ecc/views/layouts/index.html.erb
+++ b/ECC-prototype/app/apps/themes/ecc/views/layouts/index.html.erb
@@ -11,6 +11,7 @@
     <%= stylesheet_link_tag theme_asset_path("genericons/genericons.css") %>
     <%= javascript_include_tag theme_asset_path("js/main.js") %>
     <%= raw the_head %>
+    <%= favicon_link_tag 'favicon.ico' %>
 </head>
 <body>
     <div id="page" class="hfeed site">
@@ -80,5 +81,3 @@
     </div>
 </body>
 </html>
-
-
