backend of plugin: codes, staticpages, orgs

--- a/ECC-prototype/apps/plugins/ecc/app/views/plugins/ecc/admin/orgs_show.html.erb
+++ b/ECC-prototype/apps/plugins/ecc/app/views/plugins/ecc/admin/orgs_show.html.erb
@@ -1,8 +1,10 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h4><%= @org.name %></h4>
-    </div>
-    <div class="panel-body">
-      <%= @org.desc %>
-    </div>
-</div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4><%= @org.name %></h4>
+            </div>
+            <div class="panel-body">
+              <%= @org.desc %>
+              <%=button_to "Edit Code", edit_admin_plugins_ecc_ecc_org_path, method: :get, class: 'pull-right' %>
+              <%=button_to "Delete",  admin_plugins_ecc_ecc_org_path(@org), method: :delete, data: { confirm: 'Are you sure?' },  class: 'pull-right' %>
+            </div>
+        </div>
