updated some frontend, backend functioning well

--- a/ECC-prototype/app/apps/themes/ecc/views/layouts/index.html.erb
+++ b/ECC-prototype/app/apps/themes/ecc/views/layouts/index.html.erb
@@ -65,16 +65,33 @@
             </div><!-- #primary -->
 
         </div>
-
         <!-- footer -->
-        <footer id="colophon" class="site-footer" role="contentinfo">
-            <div role="complementary" class="sidebar-container" id="secondary">
+<footer class="column">
+        <h5>RESOURCES</h5>
+            <ul>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/node/5621">Print Guide</a></li>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/node/5421">Collection Policy</a></li>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/bibliography">Bibliography</a></li>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/introduction">Why Codes?</a></li>
+            </ul>
+      
+        <h5>ETHICS @ IIT</h5>
+            <ul>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/about">About</a></li>
+                <li><a class="flinks" href="http://ethics.iit.edu/ecodes/authoring-code">Authoring a Code</a></li>
+                <li><a class="flinks" href="http://ethics.iit.edu/">CSEP</a></li>
+                <li><a class="flinks" href="http://ethicscodescollection.blogspot.com/">News/Updates</a></li>
+            </ul>
+    
+        <h5>SUBSCRIBE TO THE CSEP</h5>  
+            <form>
+                <input type="text" id="emailbar" value="" placeholder="Email Address">
+                <button type="submit" id="emailbutton">SUBSCRIBE</button>
+            </form>
+            <p>3241 S Federal Street, Room 204 | Chicago, IL 60616</p> <p>Tel 312.567.3017 |<a href="mailto:csep@iit.edu"> csep@iit.edu</a>
+                </p>
 
-            </div>
-            <div class="site-info">
-                <%= raw current_theme.the_field("footer") %>
-            </div><!-- .site-info -->
-        </footer><!-- #colophon -->
+</footer>
         <!-- ./footer -->
     </div>
 </body>
