--- a/ECC-prototype/app/apps/themes/ecc/views/layouts/index.html.erb
+++ b/ECC-prototype/app/apps/themes/ecc/views/layouts/index.html.erb
@@ -6,6 +6,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!-- END META SECTION -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <%#= javascript_include_tag theme_asset_path("js/main.js") %>
     <%= stylesheet_link_tag theme_asset_path("css/main.css") %>
     <%= stylesheet_link_tag theme_asset_path("genericons/genericons.css") %>
